tests/tslib_syntax_off/tslib_syntax_off.exp
Error ------------------------------------------------------------------------------------------------- test.js.flow:2:7

Declaration without `declare` is not enabled. [unsupported-syntax]

   2| const foo: string; // ERROR
            ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:5:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   5| function named(a: string): string; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:8:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   8| component Button(props: { label: string }); // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

`import("module")` type syntax is not enabled. [unsupported-syntax]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

Cannot use `Component` as a type because it is an `any`-typed value. Type `Component` properly, so it is no longer
`any`-typed, to use it as an annotation. [value-as-type]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^^^^^^^^^^^



Found 5 errors
